# trabalho-final-verificador_pddl_martinsglucas

./: README.md  pyproject.toml
exemplos/erro_arity_invalida/: domain.pddl  problem.pddl
exemplos/erro_objeto_nao_declarado/: problem.pddl
exemplos/erro_predicado_nao_declarado/: problem.pddl
exemplos/erro_requirement_nao_importado/: domain.pddl  problem.pddl
exemplos/erro_tipo_de_argumento_invalido/: domain.pddl  problem.pddl
exemplos/erro_tipo_nao_declarado/: domain.pddl  problem.pddl
exemplos/valido1_simples/: problem.pddl
exemplos/valido2_visit_all_sequential/: domain.pddl  problem.pddl
exemplos/valido3_fcte_entregas/: domain.pddl  problem.pddl
exemplos/valido4_simples/: domain.pddl  problem.pddl
pddl/: __init__.py  __main__.py  ast.py  cli.py  ctx.py  errors.py  grammar.lark  node.py  parser.py  transformer.py
